# farxplus

./: Cargo.toml  README.md
.github/workflows/: release.yml
assets/: AppIcon.icns
src/: app.rs  build.rs  cli.rs  far_fmt.rs  gui.rs  main.rs
