[package]
name = "FARxPlus"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.6.1", features = ["derive"] }
rayon = "1.12.0"
gtk4 = { version = "0.9", features = ["v4_10"] }
gdk4 = { version = "0.9", features = ["v4_10"] }
glib = "0.20"
gio = "0.20"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
